--- a/index.html
+++ b/index.html
@@ -4,103 +4,82 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Bergen Billiards</title>
-    <style>
-      /* Basic Reset */
-      * {
-        margin: 0;
-        padding: 0;
-        box-sizing: border-box;
-      }
-
-      /* Background and Layout */
-      body,
-      html {
-        height: 100%;
-        font-family: Arial, sans-serif;
-        color: #ffffff;
-      }
-
-      .background {
-        position: fixed;
-        top: 0;
-        left: 0;
-        width: 100%;
-        height: 100%;
-        background: url("background.jpg") no-repeat center center fixed;
-        background-size: cover;
-        z-index: -1;
-      }
-
-      .content {
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-        align-items: center;
-        text-align: center;
-        height: 100%;
-        padding: 20px;
-        background-color: rgba(0, 0, 0, 0.6);
-      }
-
-      /* Styling for the text */
-      h1 {
-        font-size: 3em;
-        margin-bottom: 0.5em;
-      }
-
-      p {
-        font-size: 1.2em;
-        margin-bottom: 1em;
-      }
-
-      .info {
-        font-size: 1.2em;
-      }
-
-      .info ul {
-        list-style: none;
-        padding: 0;
-      }
-
-      .info li {
-        display: block;
-        margin-right: 15px;
-      }
-
-      /* Responsive Design */
-      @media (max-width: 600px) {
-        h1 {
-          font-size: 2em;
-        }
-        p {
-          font-size: 1em;
-        }
-        .info {
-          font-size: 1em;
-        }
-      }
-    </style>
+    <link rel="stylesheet" href="styles.css" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css"
+    />
   </head>
   <body>
-    <div class="background"></div>
-
-    <div class="content">
-      <h1>Bergen Billiards</h1>
-      <p>Your Favorite Pool Hall in Town</p>
-      <div class="info">
-        <p><strong>Address:</strong> 411 12th St, Palisades Park, NJ 07650</p>
-        <p><strong>Hours:</strong></p>
-        <ul>
-          <li>Thursday: 11 AM–1 AM</li>
-          <li>Friday: 11 AM–2 AM</li>
-          <li>Saturday: 11 AM–2 AM</li>
-          <li>Sunday: 11 AM–1 AM</li>
-          <li>Monday: 11 AM–1 AM</li>
-          <li>Tuesday: 11 AM–1 AM</li>
-          <li>Wednesday: 11 AM–1 AM</li>
-        </ul>
-        <p><strong>Phone:</strong> (908) 936-7807</p>
+    <nav class="navbar">
+      <div class="logo">
+        <a href="index.html">
+          <img src="logo.png" alt="Bergen Billiards Logo" />
+          <span class="text-logo">Bergen Billiards</span>
+        </a>
       </div>
-    </div>
+      <div class="menu-toggle" id="menuToggle">
+        <i class="fas fa-bars"></i>
+      </div>
+      <ul class="nav-links">
+        <li><a href="index.html">Home</a></li>
+        <li><a href="events.html">Events</a></li>
+        <li><a href="leagues.html">Leagues</a></li>
+        <li><a href="pro-shop.html">Pro Shop</a></li>
+        <li><a href="contact.html">Contact</a></li>
+      </ul>
+    </nav>
+
+    <main>
+      <section id="home" class="hero">
+        <div class="hero-content">
+          <h1>Welcome to Bergen Billiards</h1>
+          <p>Your Premier Billiards Destination in Palisades Park</p>
+        </div>
+      </section>
+    </main>
+
+    <footer>
+      <div class="contact-footer">
+        <div class="footer-container">
+          <div class="footer-section">
+            <h3>Bergen Billiards</h3>
+            <p>411 12th St</p>
+            <p>Palisades Park, NJ 07650</p>
+            <p>Phone: (908) 936-7807</p>
+          </div>
+          <div class="footer-section">
+            <h3>Hours</h3>
+            <p>Sun - Thu: 11 AM–1 AM</p>
+            <p>Fri - Sat: 11 AM–2 AM</p>
+          </div>
+          <div class="footer-section">
+            <h3>Connect With Us</h3>
+            <div class="footer-social">
+              <a href="https://www.facebook.com/groups/2760169990832516/"
+                ><i class="fab fa-facebook"></i
+              ></a>
+              <a href="#"><i class="fab fa-instagram"></i></a>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <div class="copyright">
+        <div class="footer-content">
+          <div class="footer-info">
+            <p>&copy; 2024 Bergen Billiards. All rights reserved.</p>
+          </div>
+          <div class="social-links">
+            <a href="https://www.facebook.com/groups/2760169990832516/"
+              ><i class="fab fa-facebook"></i
+            ></a>
+            <a href="#"><i class="fab fa-instagram"></i></a>
+          </div>
+        </div>
+      </div>
+    </footer>
+
+    <script src="script.js"></script>
   </body>
 </html>
