--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <body>
     <nav class="navbar">
       <div class="logo">
-        <a href="index.html">
+        <a href="/">
           <img src="logo.png" alt="Bergen Billiards Logo" />
           <span class="text-logo">Bergen Billiards</span>
         </a>
@@ -22,7 +22,7 @@
         <i class="fas fa-bars"></i>
       </div>
       <ul class="nav-links">
-        <li><a href="index.html">Home</a></li>
+        <li><a href="/">Home</a></li>
         <li><a href="events.html">Events</a></li>
         <li><a href="leagues.html">Leagues</a></li>
         <li><a href="pro-shop.html">Pro Shop</a></li>
