--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
       <section id="home" class="hero">
         <div class="hero-content">
           <h1>Welcome to Bergen Billiards</h1>
-          <p>Your Premier Billiards Destination in Palisades Park</p>
+          <p>Your Premier Billiards Destination in Palisades Park, NJ</p>
         </div>
       </section>
     </main>
