update instagram link

--- a/contact.html
+++ b/contact.html
@@ -85,7 +85,9 @@
               <a href="https://www.facebook.com/groups/2760169990832516/"
                 ><i class="fab fa-facebook"></i
               ></a>
-              <a href="#"><i class="fab fa-instagram"></i></a>
+              <a href="https://www.instagram.com/bergen_billiards/"
+                ><i class="fab fa-instagram"></i
+              ></a>
             </div>
           </div>
         </div>
