fix: update Facebook link to profile page across all pages

--- a/contact.html
+++ b/contact.html
@@ -82,7 +82,7 @@
           <div class="footer-section">
             <h3>Connect With Us</h3>
             <div class="footer-social">
-              <a href="https://www.facebook.com/groups/2760169990832516/"
+              <a href="https://www.facebook.com/profile.php?id=61567765594206"
                 ><i class="fab fa-facebook"></i
               ></a>
               <a href="https://www.instagram.com/bergen_billiards/"
