Add Ethrys credit to footer

--- a/contact.html
+++ b/contact.html
@@ -97,6 +97,7 @@
         <div class="footer-content">
           <div class="footer-info">
             <p>&copy; 2025 Bergen Billiards. All rights reserved.</p>
+            <p>Website created by <a href="https://ethrys.com" target="_blank" rel="noopener noreferrer">Ethrys</a></p>
           </div>
         </div>
       </div>
