Update copyright to 2026, update Ethrys credit text

--- a/contact.html
+++ b/contact.html
@@ -96,8 +96,8 @@
       <div class="copyright">
         <div class="footer-content">
           <div class="footer-info">
-            <p>&copy; 2025 Bergen Billiards. All rights reserved.</p>
-            <p>Website created by <a href="https://ethrys.com" target="_blank" rel="noopener noreferrer">Ethrys</a></p>
+            <p>&copy; 2026 Bergen Billiards. All rights reserved.</p>
+            <p>Website built and managed by <a href="https://ethrys.com" target="_blank" rel="noopener noreferrer">Ethrys</a>.</p>
           </div>
         </div>
       </div>
